# immich-simple-slideshow

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/immich_slideshow/: README.md  __init__.py  camera.py  config_flow.py  const.py  hub.py  icons.json  image.py  immich_slideshow  manifest.json  sensor.py  strings.json
custom_components/immich_slideshow/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_hub.py  test_image.py  test_sensor.py
